[gd_scene load_steps=14 format=3 uid="uid://6cyk5riamcr2"]

[ext_resource type="Script" uid="uid://86a5pbq6c8bd" path="res://scenes/canvas_layers/debug_canvas_layer/debug_canvas_layer.gd" id="1_dc7ru"]
[ext_resource type="PackedScene" uid="uid://ibsed7a42sou" path="res://scenes/ui/generic_line_edit/generic_line_edit.tscn" id="2_ilj0y"]
[ext_resource type="PackedScene" uid="uid://duwxqia2hvbth" path="res://scenes/ui/generic_panel/generic_panel.tscn" id="2_n6ab4"]
[ext_resource type="Shader" uid="uid://2iyv7xdg88rp" path="res://resources/shaders/global_colors.gdshader" id="3_sw0fc"]
[ext_resource type="Texture2D" uid="uid://cain1lwf4wicd" path="res://assets/textures/ui/small_panel_background.png" id="4_3eko2"]
[ext_resource type="PackedScene" uid="uid://b1ua27d8xdy1w" path="res://scenes/ui/generic_scroll_container/generic_scroll_container.tscn" id="4_cgxyk"]
[ext_resource type="PackedScene" uid="uid://4qjx8c3wfygx" path="res://scenes/ui/generic_label/generic_label.tscn" id="5_s1b6n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0lypx"]
resource_local_to_scene = true
shader = ExtResource("3_sw0fc")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 0.7
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_feuq6"]
resource_local_to_scene = true
shader = ExtResource("3_sw0fc")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l83k7"]
resource_local_to_scene = true
shader = ExtResource("3_sw0fc")
shader_parameter/type = 4
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c600f"]
resource_local_to_scene = true
shader = ExtResource("3_sw0fc")
shader_parameter/type = 2
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wxfi0"]
resource_local_to_scene = true
shader = ExtResource("3_sw0fc")
shader_parameter/type = 1
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hxvkm"]
resource_local_to_scene = true
shader = ExtResource("3_sw0fc")
shader_parameter/type = 2
shader_parameter/modulate = Color(1, 1, 1, 1)
shader_parameter/strength = 1.0
shader_parameter/alpha = 1.0
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/scale_mode = 0
shader_parameter/scale = 1.0
shader_parameter/saturation = 1.0
shader_parameter/brightness = 0.0
shader_parameter/use_screen_texture = false
shader_parameter/fill = false
shader_parameter/label_mode = false
shader_parameter/outline_type = 0
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/outline_pattern = 0
shader_parameter/add_margins = false
shader_parameter/width = 0.0
shader_parameter/flip_colors = false
shader_parameter/inside = false
shader_parameter/enable_dither = false
shader_parameter/dither_colors = PackedInt32Array(0, 0, 0)
shader_parameter/angle = 0.0
shader_parameter/enable_gradient = false
shader_parameter/gradient_blend_mode = 0
shader_parameter/gradient_speed = 1.0
shader_parameter/gradient_size = 1.0
shader_parameter/gradient_animated = false
shader_parameter/gradient_time = 0.0

[node name="DebugCanvasLayer" type="CanvasLayer" node_paths=PackedStringArray("console_input", "result_label")]
layer = 128
script = ExtResource("1_dc7ru")
console_input = NodePath("MarginContainer/VBoxContainer/HBoxContainer/GenericLineEdit")
result_label = NodePath("MarginContainer/VBoxContainer/MarginContainer/GenericScrollContainer/MarginContainer/ScrollContainer/MarginContainer/ResultLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GenericPanel" parent="MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource("2_n6ab4")]
material = SubResource("ShaderMaterial_0lypx")
layout_mode = 2
size_flags_vertical = 3
region_rect = Rect2(0, 0, 7, 5)
patch_margin_top = 4
patch_margin_bottom = 2

[node name="GenericScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource("4_cgxyk")]
layout_mode = 2
theme_override_constants/separation = 0

[node name="GenericPanel" parent="MarginContainer/VBoxContainer/MarginContainer/GenericScrollContainer/MarginContainer" index="0"]
visible = false
material = SubResource("ShaderMaterial_feuq6")

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GenericScrollContainer/MarginContainer" index="1"]
metadata/child_of_scroll_container = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/GenericScrollContainer/MarginContainer/ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
metadata/child_of_scroll_container = true

[node name="ResultLabel" parent="MarginContainer/VBoxContainer/MarginContainer/GenericScrollContainer/MarginContainer/ScrollContainer/MarginContainer" instance=ExtResource("5_s1b6n")]
material = SubResource("ShaderMaterial_l83k7")
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 1
text = ""
autowrap_mode = 3
metadata/child_of_scroll_container = true

[node name="GenericVScrollBar" parent="MarginContainer/VBoxContainer/MarginContainer/GenericScrollContainer" index="1"]
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="GenericPanel" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer" instance=ExtResource("2_n6ab4")]
material = SubResource("ShaderMaterial_c600f")
layout_mode = 2
texture = ExtResource("4_3eko2")
region_rect = Rect2(0, 1, 4, 4)
patch_margin_top = 2
patch_margin_right = 2

[node name="GenericLabel" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer" instance=ExtResource("5_s1b6n")]
material = SubResource("ShaderMaterial_wxfi0")
layout_mode = 2
text = " >"

[node name="GenericLineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_ilj0y")]
layout_mode = 2
size_flags_horizontal = 3

[node name="GenericPanel" parent="MarginContainer/VBoxContainer/HBoxContainer/GenericLineEdit" index="0"]
material = SubResource("ShaderMaterial_hxvkm")
region_rect = Rect2(1, 1, 4, 4)
patch_margin_left = 1
patch_margin_top = 2
patch_margin_right = 2

[node name="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/GenericLineEdit/MarginContainer" index="0"]
placeholder_text = ""

[editable path="MarginContainer/VBoxContainer/MarginContainer/GenericScrollContainer"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer/GenericLineEdit"]
